# ComputerArchitecture

./: .gitignore  CMakeLists.txt  bigchars.c  bigchars.h  command.c  command.h  cpu.c  cpu.h  file.c  hard.c  hard.h  main.c  memory.c  memory.h  readkey.c  readkey.h  register.c  register.h  shell.c  shell.h  term.c  term.h
